Изменён юнит тест на подключение

--- a/infsys/ConnectionTest/ConnectionTest.csproj
+++ b/infsys/ConnectionTest/ConnectionTest.csproj
@@ -68,6 +68,11 @@
       <Name>infsys</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\infsys\App.config">
+      <Link>App.config</Link>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
